# sns-pallets

./: Cargo.toml  README.md  before_commit.sh  deny.toml
ci/src/: main.rs
sns-registrar/: Cargo.toml
sns-registrar/src/: auction.rs  benchmarks.rs  mock.rs  nft.rs  origin.rs  price_oracle.rs  redeem_code.rs  registrar.rs  registry.rs  tests.rs  traits.rs
sns-resolvers/: Cargo.toml
sns-resolvers/src/: benchmarks.rs
